Login, Logout, Authentication Middleware Added

--- a/views/layouts/system.hbs
+++ b/views/layouts/system.hbs
@@ -49,7 +49,7 @@
                                 </div>
                                 <div class="separator"></div>
                                 <div class="menu">
-                                    <a href="{{route request ''}}"><img src="{{asset request "system/assets/img/logout.png"}}"> Logout</a>
+                                    <a href="{{route request 'system/logout'}}"><img src="{{asset request "system/assets/img/logout.png"}}"> Logout</a>
                                 </div>
                             </div>
                         </div>
