--- a/views/system/register.hbs
+++ b/views/system/register.hbs
@@ -36,15 +36,15 @@
                                     <label for="dob_day">Date of Birth</label><br>
                                     <select name="dob_day" id="dob_day" style="width:30%">
                                         <option value=''>Day</option>
-                                        
+                                        {{{dmyProvider 'day' true ''}}}
                                     </select>
                                     <select name="dob_month" style="width:40%">
                                         <option value=''>Month</option>
-                                       
+                                        {{{dmyProvider 'month' true ''}}}       
                                     </select>
                                     <select name="dob_year" style="width:26.77%">
                                         <option value=''>Year</option>
-                                        
+                                        {{{dmyProvider 'year' true ''}}}
                                     </select>
                                     <br>
                                 </div>
